First cut of the Hypercube code
This commit adds support for ndarray-like Java classes as well as
numpy-like support. This code should be considered experimental.

See the [notebook](python/tests/hypercube.ipynb) for examples of use.

Since this changes the initialisation semantics it bumps the version
number from 1.12 to 1.13.